# coreai-migrator

./: README.md  pyproject.toml  requirements.txt
coreai_migrator/: __init__.py  analyzer.py  diff_builder.py  mappings.py  models.py  reporter.py  scanner.py
tests/: __init__.py  test_analyzer.py  test_diff_builder.py  test_mappings.py  test_models.py  test_reporter.py  test_scanner.py
tests/fixtures/: sample_coreml.swift
