[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "coreai-migrator"
version = "0.1.0"
description = "A CLI tool that scans iOS/macOS Swift and Objective-C codebases for deprecated Core ML API calls and suggests Core AI framework replacements."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "coreai_migrator contributors" }
]
keywords = ["coreml", "coreai", "swift", "objc", "migration", "ios", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
coreai-migrator = "coreai_migrator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["coreai_migrator*"]

[tool.setuptools.package-data]
coreai_migrator = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
